--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,14 @@
 
+/* Global Styles & Reset */
+
 body {
   display: flex;
-  flex: 1 1 100%;
   flex-direction: column;
+  min-width: 320px;
   min-height: 100vh;
   background: #080808;
   color: #a8a8a8;
-  font-family: 'Open Sans', monospace;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   cursor: default;
   animation: fadeIn 1s;
@@ -28,6 +30,8 @@ b {
   letter-spacing: .02em;
 }
 
+
+/* Global Animations */
 
 @keyframes fadeIn {
   0% {opacity: 0;}
