--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -186,3 +186,87 @@
     border-radius: 5px;
   }
 }
+
+
+/* Side Panel */
+
+.side-panel-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 10001;
+  width: 40px;
+  height: 40px;
+  border: 4px solid #3f3427;
+  border-radius: 50%;
+  background: #222;
+  text-align: center;
+  user-select: none;
+  cursor: pointer;
+}
+
+.side-panel-button-hamburger,
+.side-panel-button-cross {
+  animation: fadeIn .3s;
+}
+
+.side-panel-button-hamburger {
+  font-size: 26px;
+  line-height: 38px;
+}
+
+.side-panel-button-cross {
+  font-size: 16px;
+  line-height: 37px;
+}
+
+.side-panel {
+  position: fixed;
+  box-sizing: border-box;
+  top: 0;
+  right: -600px;
+  z-index: 10000;
+  width: min(calc(100% - 30px), 600px);
+  height: 100vh;
+  padding: 10px 10px 50px 10px;
+  border-left: 4px solid #3f3427;
+  background: #111;
+  transition: .4s;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.side-panel::-webkit-scrollbar { 
+  display: none;
+}
+
+.side-panel-open {
+  right: 0;
+}
+
+.side-panel-header {
+  padding: 10px;
+  color: #9c815f;
+  font-size: 24px;
+  letter-spacing: .02em;
+}
+
+.page-blanket {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, .6);
+}
+
+@media (max-width: 599px) {
+  .side-panel-button {
+    top: 5px;
+    right: 5px;
+  }
+  .side-panel-header {
+    font-size: 20px;
+  }
+}
