--- a/src/app/side-panel-nav-block/side-panel-nav-block.component.css
+++ b/src/app/side-panel-nav-block/side-panel-nav-block.component.css
@@ -60,6 +60,7 @@
   right: 10px;
   padding: 0 8px;
   background: rgba(0, 0, 0, .15);
+  color: #999;
   border-radius: 4px;
   font-size: smaller;
   cursor: pointer;
