--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,6 @@
   font-size: 32px;
   font-weight: 500;
   letter-spacing: 0.02em;
-  user-select: none;
 }
 
 @media (max-width: 991px) {
@@ -204,6 +203,14 @@
   user-select: none;
   cursor: pointer;
   animation: fadeIn .3s;
+  transition: .2s;
+}
+
+@media (hover: hover) {
+  .side-panel-button:hover {
+    border-radius: 10px;
+    background: #242424;
+  }
 }
 
 .side-panel-button.side-panel-button-hidden {
@@ -235,7 +242,7 @@
   height: 100vh;
   padding: 10px 10px 50px 10px;
   border-left: 4px solid #3f3427;
-  background: #111;
+  background: repeating-linear-gradient(-45deg, #111, #111 10px, #181818 12px);
   transition: .4s;
   overflow-y: scroll;
   scrollbar-width: none;
