--- a/src/app/division-container/division-container.component.css
+++ b/src/app/division-container/division-container.component.css
@@ -14,6 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: stretch;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .division-body:before {
@@ -24,16 +26,19 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: #000;
+  background: linear-gradient(-45deg, #000, #111);
+  box-shadow: 0 0 2px 2px #141414 inset;
+  border-radius: 10px;
 }
 
-.division-body.type-era,
-.division-body.type-period,
-.division-body.type-epoch,
-.division-body.type-era:before,
-.division-body.type-period:before,
-.division-body.type-epoch:before {
-  border-radius: 10px;
+.division-body.type-eon,
+.division-body.type-eon:before {
+  border-radius: 0;
+  width: calc(100% + 10px);
+}
+
+.division-body.type-eon:before {
+  left: -5px;
 }
 
 .division-body.type-era,
@@ -157,6 +162,7 @@
 
 .division-name {
   display: flex;
+  justify-content: center;
   margin-bottom: 10px;
   font-size: 24px;
   letter-spacing: .01em;
@@ -170,6 +176,7 @@
   text-align: center;
   font-size: 18px;
   letter-spacing: 0.02em;
+  text-shadow: 1px 1px #111;
 }
 
 @media (max-width: 991px) {
@@ -221,6 +228,13 @@
   display: block;
   width: 100%;
   border-radius: 6px;
+  transition: .2s;
+}
+
+@media (hover: hover) {
+  .division-image-container img:hover {
+    filter: brightness(1.05);
+  }
 }
 
 @media (max-width: 991px) {
@@ -258,6 +272,7 @@
   display: list-item;
   margin-bottom: 10px;
   padding-left: 10px;
+  text-shadow: .5px .5px #333;
 }
 
 .division-description li:last-of-type {
@@ -308,6 +323,7 @@
   margin: 0 20px;
   align-items: center;
   justify-content: center;
+  animation: fadeIn .3s;
 }
 
 .timeline-button-container.subdivisions-displayed {
